# pose

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE.txt  Makefile  README.md  RELEASING.md  perf.csv  perf.txt  pytest.ini  setup.py
docs/: README.md  conf.py  examples.rst  index.rst  js_docs.rst  json.rst  modules.rst  pose_format.numpy.representation.rst  pose_format.numpy.rst  pose_format.pose_body.rst  pose_format.pose_representation.rst  pose_format.pose_visualizer.rst  pose_format.rst  pose_format.tensorflow.masked.rst  pose_format.tensorflow.masked.tensor_graph_mode_test.rst  pose_format.tensorflow.rst  (+32 more)
src/python/: .gitignore  README.md  pyproject.toml
src/python/ComfyUI-Pose-Format/: __init__.py  nodes.py
src/python/pose_format/: BUILD  __init__.py  pose.py  pose_body.py  pose_header.py  pose_representation.py  pose_test.py  pose_visualizer.py
src/python/pose_format/numpy/: BUILD  __init__.py  pose_body.py
src/python/pose_format/numpy/representation/: distance.py  distance_test.py
src/python/pose_format/tensorflow/: BUILD  pose_body.py  pose_body_test.py  pose_representation.py  pose_representation_test.py
src/python/pose_format/tensorflow/masked/: BUILD  __init__.py  tensor.py  tensor_graph_mode_test.py  tensor_test.py  tensorflow.py  tensorflow_test.py
src/python/pose_format/tensorflow/representation/: angle.py  angle_test.py  distance.py  distance_test.py  inner_angle.py  inner_angle_test.py  point_line_distance.py  point_line_distance_test.py
src/python/pose_format/torch/: BUILD  pose_body.py  pose_representation.py
src/python/pose_format/torch/masked/: BUILD  __init__.py  collator.py  tensor.py  torch.py  torch_test.py
src/python/pose_format/torch/representation/: BUILD  angle.py  angle_test.py  distance.py  distance_test.py  inner_angle.py  inner_angle_test.py  point_line_distance.py  point_line_distance_test.py  points.py
src/python/pose_format/utils/: BUILD  alphapose.py  alphapose_133.py  alphapose_test.py  cocowholebody133_header.py  conftest.py  directorybackup.py  fast_math.py  generic.py  generic_test.py  hand.py  holistic.py  mmposewholebody.py  mmposewholebody_test.py  normalization_3d.py  openpifpaf.py  openpose.py  openpose_135.py  openpose_test.py  optical_flow.py  pose_converter.py  reader.py  reader_test.py  siren.py
src/python/tests/: hand_estimation_test.py  hand_normalization_test.py  holistic_mirror_test.py  optical_flow_test.py  pose_numpy_test.py  pose_tensorflow_test.py  pose_test.py  pose_tf_graph_mode_test.py  pose_torch_test.py  visualization_test.py
src/python/tests/data/: mediapipe.pose  mediapipe_hand_normalized.pose  mediapipe_long_hand_normalized.pose  optical_flow.npy
(+577 files in other folders)
